# elementary-app-tutorial

./: .gitignore  COPYING  meson.build
data/: com.github.jhthompson.elementary-app-tutorial.appdata.xml.in  com.github.jhthompson.elementary-app-tutorial.desktop.in
debian/: changelog  control  copyright
po/: POTFILES  com.github.jhthompson.elementary-app-tutorial.pot  de.po  es.po  meson.build
src/: Application.vala
